// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-entries build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries build should generate the expected files 1`] = `
Object {
  "AsyncComponent-0a2bf93a1345ecd716ca.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.render.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details-0e82719ea3ab71aafb06.css": "._91MnZhe{color:#00f}
",
  "details-d44279d056cff97acae9.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "home-62bf94bf0fd2ba3c2aa2.css": "._1QX0Hyt{color:red}
",
  "home-795200ce2fe2d544ead5.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"AsyncComponent\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/AsyncComponent-0a2bf93a1345ecd716ca.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/details-d44279d056cff97acae9.js\\">
<link data-chunk=\\"details\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\">Welcome to the Details page - <!-- -->au<span>Some special async content</span></h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [2];</script>
<script async data-chunk=\\"AsyncComponent\\" src=\\"http://localhost:4004/AsyncComponent-0a2bf93a1345ecd716ca.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/details-d44279d056cff97acae9.js\\"></script>
  </body>
</html>",
  "production/au/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\"></script>
  </body>
</html>",
  "production/nz/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"AsyncComponent\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/AsyncComponent-0a2bf93a1345ecd716ca.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/details-d44279d056cff97acae9.js\\">
<link data-chunk=\\"details\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\">Welcome to the Details page - <!-- -->nz<span>Some special async content</span></h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [2];</script>
<script async data-chunk=\\"AsyncComponent\\" src=\\"http://localhost:4004/AsyncComponent-0a2bf93a1345ecd716ca.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"http://localhost:4004/details-d44279d056cff97acae9.js\\"></script>
  </body>
</html>",
  "production/nz/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\">Welcome to the Home page - <!-- -->nz</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/runtime-027c06ef9975b62330ea.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/vendors~details~home-1e5631def1e90b5da2f0.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"http://localhost:4004/home-795200ce2fe2d544ead5.js\\"></script>
  </body>
</html>",
  "runtime-027c06ef9975b62330ea.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~details~home-1e5631def1e90b5da2f0.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-entries start should render details page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"AsyncComponent\\" rel=\\"preload\\" as=\\"script\\" href=\\"/AsyncComponent.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details~home.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"style\\" href=\\"/details.css\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/details.js\\">
<link data-chunk=\\"details\\" rel=\\"stylesheet\\" href=\\"/details.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\">Welcome to the Details page - <!-- -->au<span>Some special async content</span></h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [\\"AsyncComponent\\"];</script>
<script async=\\"\\" data-chunk=\\"AsyncComponent\\" src=\\"/AsyncComponent.js\\"></script>
<script async=\\"\\" data-chunk=\\"details\\" src=\\"/runtime.js\\"></script>
<script async=\\"\\" data-chunk=\\"details\\" src=\\"/vendors~details~home.js\\"></script>
<script async=\\"\\" data-chunk=\\"details\\" src=\\"/vendors~details.js\\"></script>
<script async=\\"\\" data-chunk=\\"details\\" src=\\"/details.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"AsyncComponent\\" rel=\\"preload\\" as=\\"script\\" href=\\"/AsyncComponent.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details~home.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details.js\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"style\\" href=\\"/details.css\\">
<link data-chunk=\\"details\\" rel=\\"preload\\" as=\\"script\\" href=\\"/details.js\\">
<link data-chunk=\\"details\\" rel=\\"stylesheet\\" href=\\"/details.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\">Welcome to the Details page - <!-- -->au<span>Some special async content</span></h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [\\"AsyncComponent\\"];</script>
<script async data-chunk=\\"AsyncComponent\\" src=\\"/AsyncComponent.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"/runtime.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"/vendors~details~home.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"/vendors~details.js\\"></script>
<script async data-chunk=\\"details\\" src=\\"/details.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries start should render home page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details~home.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"/home.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/home.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"/home.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"/runtime.js\\"></script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"/vendors~details~home.js\\"></script>
<script async=\\"\\" data-chunk=\\"home\\" src=\\"/home.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~details~home.js\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"style\\" href=\\"/home.css\\">
<link data-chunk=\\"home\\" rel=\\"preload\\" as=\\"script\\" href=\\"/home.js\\">
<link data-chunk=\\"home\\" rel=\\"stylesheet\\" href=\\"/home.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"home\\" src=\\"/runtime.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"/vendors~details~home.js\\"></script>
<script async data-chunk=\\"home\\" src=\\"/home.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
